--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,7 @@ jobs:
         command: |
           docker push hexlabs/kloudformation-playground:latest
           docker push hexlabs/kloudformation-playground:0.1.$CIRCLE_BUILD_NUM
+
+    - run:
+        name: Deploy Stack
+        command: node ./node_modules/cfn-create-or-update/cli.js --stack-name kloudformation-web --template-body file://template.yml --timeout-in-minutes 120 --region eu-west-1 --wait
