--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
         name: Transpile Kloudformation Stack
         command: |
           cd kotlin
-          kotlinc/bin/kotlinc -classpath kloudformation.jar ../.circleci/Kloudformation.kt -include-runtime -d stack.jar
-          java -classpath stack.jar:kloudformation.jar io.kloudformation.StackBuilderKt Kloudformation template.yml
+          kotlinc/bin/kotlinc -classpath kloudformation.jar ../Stack.kt -include-runtime -d stack.jar
+          java -classpath stack.jar:kloudformation.jar io.kloudformation.StackBuilderKt Stack template.yml
           mv template.yml ..
     - store_artifacts:
         path: template.yml
